<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF7F8"
    tools:context=".LiveActivity">

    <EditText
        android:id="@+id/editText_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editText_weigh"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editText_step"
        android:layout_width="232dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editText_step"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button_save"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:backgroundTint="#03DAC5"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519" />

    <Button
        android:id="@+id/button_tonometer"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:backgroundTint="#2196F3"
        android:text="@string/button_tonometer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

    <Button
        android:id="@+id/button_start"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:backgroundTint="#2196F3"
        android:text="@string/button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />
</androidx.constraintlayout.widget.ConstraintLayout>